<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/inc"
            layout="@layout/navigation_bar"
            tools:ignore="IncludeLayoutParam" />

        <include
            android:id="@+id/inc_online"
            layout="@layout/navigation_bar_online"
            tools:ignore="IncludeLayoutParam" />

        <include
            android:id="@+id/inc_love"
            layout="@layout/navigation_bar_love"
            tools:ignore="IncludeLayoutParam" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/local_music_bottomlayout"
        android:layout_below="@+id/frame">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/local_music_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

        <com.dwb.appbardemo.view.LrcView
            android:id="@+id/lrcView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </FrameLayout>


    <RelativeLayout
        android:id="@+id/local_music_bottomlayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:background="#33EEEEEE">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp">

            <ImageView
                android:id="@+id/playpattern"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/playPattern"
                android:padding="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/local_music_bottom_iv_last"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/local_music_bottom_iv_icon"
                app:layout_constraintTop_toBottomOf="@+id/currentProgress"
                app:srcCompat="@drawable/list_play" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#9933FA"
                android:contentDescription="@string/music_bottom_line"
                app:layout_constraintBottom_toTopOf="parent" />

            <com.dwb.appbardemo.view.MyImageView
                android:id="@+id/local_music_bottom_iv_icon"
                android:layout_width="60dp"
                android:layout_height="49dp"
                android:layout_centerVertical="true"
                android:background="@drawable/a1"
                android:contentDescription="@string/local_music_bottom_iv_icon"
                android:src="@drawable/icon_song"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/local_music_bottom_tv_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/local_music_bottom_iv_icon"
                android:text="@string/tv_song"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.09" />

            <TextView
                android:id="@+id/local_music_bottom_tv_singer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/local_music_bottom_tv_song"
                android:layout_alignStart="@id/local_music_bottom_tv_song"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="361dp"
                android:text="@string/tv_singer"
                android:textSize="@dimen/authorSize"
                app:layout_constraintBottom_toBottomOf="@+id/local_music_bottom_iv_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.388" />

            <TextView
                android:id="@+id/currentProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seekBarBegin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.39" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.77"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.392" />

            <TextView
                android:id="@+id/totalProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seekBarTotal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.96"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.39999998" />

            <ImageView
                android:id="@+id/local_music_bottom_iv_next"
                android:layout_width="47dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/iv_next"
                android:src="@drawable/icon_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/love_click"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/local_music_bottom_iv_play"
                app:layout_constraintTop_toBottomOf="@+id/seekBar" />

            <ImageView
                android:id="@+id/local_music_bottom_iv_play"
                android:layout_width="47dp"
                android:layout_height="49dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@id/local_music_bottom_iv_next"
                android:contentDescription="@string/iv_play"
                android:src="@drawable/icon_play"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/local_music_bottom_iv_next"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/local_music_bottom_iv_last"
                app:layout_constraintTop_toBottomOf="@+id/seekBar" />

            <ImageView
                android:id="@+id/local_music_bottom_iv_last"
                android:layout_width="48dp"
                android:layout_height="48dp"

                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/local_music_bottom_iv_play"
                android:contentDescription="@string/iv_last"
                android:src="@drawable/icon_last"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/local_music_bottom_iv_play"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/playpattern"
                app:layout_constraintTop_toBottomOf="@+id/currentProgress" />

            <ImageView
                android:id="@+id/love_click"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:contentDescription="@string/love_click"
                android:src="@drawable/music_love"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/local_music_bottom_iv_next"
                app:layout_constraintTop_toBottomOf="@+id/totalProgress" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>


</RelativeLayout>