<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150px"
            android:layout_height="170px"
            android:layout_marginLeft="60px"
            android:layout_marginTop="30px"
            android:layout_marginRight="30px"
            app:srcCompat="@drawable/touxiang" />

        <TextView
            android:id="@+id/head_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:layout_marginTop="80px"
            android:text="@string/please_login"
            android:textSize="50px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50px"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="130px"
                android:layout_height="130px"
                app:srcCompat="@drawable/lay_icn_document" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_message" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="130px"
                android:layout_height="130px"
                app:srcCompat="@drawable/lay_icn_artist" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_friend" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView

                android:id="@+id/imageView10"
                android:layout_width="130px"
                android:layout_height="130px"
                app:srcCompat="@drawable/lay_icn_upquality" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_page" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_img"
                android:layout_width="130px"
                android:layout_height="130px"
                app:srcCompat="@drawable/lay_icn_alb" />

            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dress_up" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>