<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <androidx.coordinatorlayout.widget.CoordinatorLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/toolbar"
                            app:layout_constraintHorizontal_bias="0.24"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_baseline_dehaze_24"
                            tools:srcCompat="@tools:sample/avatars" />


                        <androidx.appcompat.widget.Toolbar
                            android:id="@+id/toolbar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_scrollFlags="scroll|enterAlways">


                            <com.google.android.material.tabs.TabLayout
                                android:id="@+id/tabs"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"

                                app:layout_constraintBottom_toBottomOf="parent"


                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:tabGravity="fill"
                                app:tabIndicatorColor="@color/colorMain"
                                app:tabMode="scrollable">

                                <com.google.android.material.tabs.TabItem
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tabItem1" />

                                <com.google.android.material.tabs.TabItem
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tabItem2" />

                                <com.google.android.material.tabs.TabItem
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tabItem3" />
                            </com.google.android.material.tabs.TabLayout>


                        </androidx.appcompat.widget.Toolbar>

                        <ImageView
                            android:id="@+id/search_music"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.7"
                            app:layout_constraintStart_toEndOf="@+id/toolbar"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_baseline_search_24"
                            tools:srcCompat="@tools:sample/avatars" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

            </com.google.android.material.appbar.AppBarLayout>


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:clipToPadding="true"
                android:fillViewport="true"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:context=".MainActivity">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <view
                            android:id="@+id/view"
                            class="androidx.viewpager.widget.ViewPager"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <Toolbar
                            android:id="@+id/bottom_toolbar"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_alignParentBottom="true"
                            android:background="@drawable/bg2">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/head_image"
                                    android:layout_width="70dp"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    app:srcCompat="@drawable/discover_41" />

                                <TextView
                                    android:id="@+id/song"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="盗墓笔记-十年人间"
                                    android:textSize="16dp"
                                    android:layout_toRightOf="@+id/head_image"/>

                                <TextView
                                    android:id="@+id/author"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="盗墓笔记-十年人间"
                                    android:textSize="12dp"
                                    android:layout_alignLeft="@+id/song"
                                    android:layout_below="@+id/song"/>

                                <ImageView
                                    android:id="@+id/play_image"
                                    android:layout_width="70dp"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    app:srcCompat="@drawable/icon_play" />


                            </RelativeLayout>

                        </Toolbar>


                    </RelativeLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:headerLayout="@layout/nav_head"
        app:menu="@menu/menu_main" />
</androidx.drawerlayout.widget.DrawerLayout>